Make some changes

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             
             <section class="message fade-in-element">
                 <div class="message-card glass-card">
-                    <i class="fas fa-heart heart-icon"></i>
-                    <p class="message-text">Every moment with you feels like a dream I never want to wake up from.</p>
+                    <span class="heart-icon"><i class="fas fa-heart"></i></span>
+                    <p class="message-text">Every moment with you feels like a dream that carries me to a world where only our love exists. You are my dream come true.</p>
                 </div>
             </section>
             
